# metadata-search-service

./: Dockerfile  config_schema.json  example-config.yaml  example_config.yaml  openapi.yaml  setup.cfg
.devcontainer/: .dev_config.yaml  .metadata_search_service.yaml  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: dev_cd.yaml  unit_and_int_tests.yaml
db_migration/: __init__.py
metadata_search_service/: __init__.py  __main__.py  config.py  models.py
metadata_search_service/api/: __init__.py  deps.py  main.py
metadata_search_service/core/: __init__.py  search.py  utils.py
metadata_search_service/dao/: __init__.py  db.py  db_models.py  document.py  utils.py
scripts/: openapi_from_app.py
tests/fixtures/: __init__.py  mongodb.py  utils.py
tests/fixtures/data/: files.json  individuals.json  studies.json
tests/fixtures/test_data/: biospecimens.json  data_access_committees.json  data_access_policies.json  datasets.json  projects.json
tests/integration/: test_api.py
tests/test_data/: biospecimens.json  data_access_committees.json  data_access_policies.json  datasets.json  experiments.json  files.json  individuals.json  projects.json  samples.json  studies.json  technologies.json
