# Copyright 2021 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = metadata_search_service
version = attr: metadata_search_service.__version__
description = Metadata Search Service
url = https://github.com/ghga-de/metadata-search-service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Please adapt to the current version of the library
    ghga-service-chassis-lib[pubsub,api]==0.4.0
    PyYAML==5.4.1
    motor==2.5.1
    stringcase==1.2.0
python_requires = >= 3.9

[options.entry_points]
# Please adapt to package name:
console_scripts =
    metadata-search-service = metadata_search_service.__main__:run

[options.extras_require]
# Please adapt:
dev =
    pytest
    pytest-cov
    mypy
    pylint
    black
    isort
    bandit
    flake8
    pre-commit
    requests
    mkdocs
    mkdocs-material
    mkdocstrings
    testcontainers
    typer
all =
    %(dev)s


[options.packages.find]
exclude = tests
